  SECURITY: x32 fixes: one of them could lead to memory corruption because struct stat was declared too short (Christian Seiler)
  add really crappy pthread_rwclock implementation for openssl 1.1
  move getrandom and getentropy declarations to <sys/random.h> to match glibc 2.25
  add secure_getenv
  mempcpy -> memcpy in sha256crypt and sha512crypt

0.33:
  first stab at getting TLS to work in actual threads
  use fs: to find current thread on x86_64
  add fallocate, posix_fallocate
  work around Ubuntu who added -fstack-protector to their gcc, which
    added stack protector code to the function from the dietlibc startup
    code that sets up the registers and segments used by the stack
    protector mechanism.
  fix sys/personality.h (Mathias Krause)
  update sys/ptrace.h (Nikola Vladov)
  fix fork+pthread closing fd 0 (Tim München)
  finally add stdout tty detection and turn off linewise buffering if !tty
  enlarge dev_t to 32-bit on i386, arm, sparc, s390 (Pascal Terjan)
  update sys/stat.h to include nsec and enlarge dev_t
  add WANT_VALGRIND_SUPPORT in dietfeatures.h.  When #defined, the
    startup code will check if the program is running under valgrind,
    and if it is, the SIMD optimized string routines will switch back to
    a slower version that does not generate valgrind false positives.
  add WANT_LLMNR in dietfeatures.h.  Now you can do "ping windowsbox"
    and it works if that box runs win7 and trusts the LAN; the down side
    is that LLMNR does not like the .local prefix, so DNS does zeroconf
    lookup for unqualified names now, too.
  add WANT_GNU_STARTUP_BLOAT in dietfeatures.h to support
    program_invocation_short_name and program_invocation_name
  add INT*_MIN, INT*_MAX, UINT*_MAX, etc to stdint.h
  remove const from stdsignal prototype to agree with standard
  only count %[] conversions in *scanf if they matched at least one char
    (Indan Zupancic)
  make sure __sc_nr_cpus does not dump core if /proc/cpuinfo is larger