@@ -1,0 +1,4 @@
+#undef __PIE__
+
+#include "lib/stackgap-common.h"
+
